# copilot-api-rust

./: .gitignore  CLAUDE.md  README.md
.claude/agents/: architect.md  code-reviewer.md  planner.md  rust-reviewer.md  security-reviewer.md  tdd-guide.md
.claude/commands/: checkpoint.md  code-review.md  plan.md  tdd.md  verify.md
.claude/hooks/: hooks.json
.claude/rules/: agents.md  coding-style.md  git-workflow.md  hooks.md  performance.md  security.md  testing.md
.claude/skills/: THIRD_PARTY_NOTICES.txt  axum-patterns.md  backend-patterns.md  continuous-learning.md  rust-patterns.md  security-review.md  slint-patterns.md  strategic-compact.md  tdd-workflow.md
.github/workflows/: release.yml
docs/: DEV_PLAN.md  EVERYTHING_CLAUDE_INTEGRATION_PLAN.md
gui-slint/: .gitignore  Cargo.toml  build.rs
gui-slint/src/: autostart.rs  azure_config.rs  claude_config.rs  config.rs  env_check.rs  hooks_config.rs  main.rs  models.rs  server.rs
gui-slint/ui/: app.slint
rust-server/: Cargo.toml
rust-server/src/: approval.rs  auth_flow.rs  cli.rs  commands.rs  config.rs  copilot.rs  error.rs  errors.rs  github.rs  main.rs  paths.rs  rate_limit.rs  skills_sync.rs  state.rs  token.rs  token_store.rs  tokenizer.rs  usage.rs  utils.rs
rust-server/src/hooks/: builtins.rs  claude_paths.rs  executor.rs  mod.rs  types.rs
rust-server/src/hooks/matcher/: evaluator.rs  grammar.pest  parser.rs
rust-server/src/hooks/observe/: mod.rs
rust-server/src/routes/: auth.rs  chat_completions.rs  messages.rs  misc.rs  mod.rs  models.rs  responses.rs  streaming.rs
rust-server/src/services/: anthropic.rs  azure.rs  copilot.rs  github.rs  mod.rs  openai.rs  vscode.rs
